--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <div class="logo-container">
             <img src="./img/logo.webp" alt="Kart Lago Max Logo" class="logo">
         </div>
-        <video autoplay loop muted playsinline>
-            <source src="./img/video.mp4" type="video/mp4">
-        </video>
+        <div class="hero-slideshow">
+            <div class="hero-slide"></div>
+            <div class="hero-slide"></div>
+            <div class="hero-slide"></div>
+            <div class="hero-slide"></div>
+        </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Kart Lago Max</h1>
@@ -45,13 +48,16 @@
         <h2 class="section-title">I Nostri Prezzi</h2>
         <div class="pricing-container">
             <div class="price-card">
-                <img src="./img/pack_1.webp" alt="Noleggio Go-Kart a Ravenna, pacchetto Training">
+                <img src="./img/pack_1.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto Training">
             </div>
             <div class="price-card">
-                <img src="./img/pack_2.webp" alt="Noleggio Go-Kart a Ravenna, pacchetto Training+">
+                <img src="./img/pack_2.webp" alt="Prezzo noleggio Go-Kart a Ravenna, pacchetto Training+">
             </div>
             <div class="price-card">
-                <img src="./img/pack_3.webp" alt="Noleggio Go-Kart a Ravenna, pacchetto The Race">
+                <img src="./img/pack_3.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto The Race">
+            </div>
+            <div class="price-card">
+                <img src="./img/pack_4.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto Sprint Race">
             </div>
         </div>
     </section>
@@ -117,11 +123,11 @@
         <div class="contact-info">
             <p>
                 <a href="https://www.google.com/maps/dir//Via+Staggi,+221,+48121+Ravenna+RA/" target="_blank"
-                    class="address-link"><i class="fas fa-map-marker-alt"></i>Via Staggi, 221, 48121 Ravenna RA</a>
+                    class="address-link"><i class="fas fa-map-marker-alt"></i> Via Staggi, 221, 48121 Ravenna RA</a>
             </p>
 
             <p>
-                <a href="tel:+393272952688"><i class="fas fa-phone"></i>+39 3272952688</a>
+                <a href="tel:+393272952688"><i class="fas fa-phone"></i> +39 3272952688</a>
             </p>
 
             <div class="social-links">
