--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
         <div class="logo-container">
             <img src="./img/logo.webp" alt="Kart Lago Max Logo" class="logo">
         </div>
-        <div class="hero-slideshow">
-            <div class="hero-slide"></div>
-            <div class="hero-slide"></div>
-            <div class="hero-slide"></div>
-            <div class="hero-slide"></div>
-        </div>
+        <video autoplay loop muted playsinline>
+            <source src="./img/video.mp4" type="video/mp4">
+        </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Kart Lago Max</h1>
@@ -51,13 +48,13 @@
                 <img src="./img/pack_1.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto Training">
             </div>
             <div class="price-card">
-                <img src="./img/pack_2.webp" alt="Prezzo noleggio Go-Kart a Ravenna, pacchetto Training+">
+                <img src="./img/pack_2.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto Training+">
             </div>
             <div class="price-card">
                 <img src="./img/pack_3.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto The Race">
             </div>
             <div class="price-card">
-                <img src="./img/pack_4.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto Sprint Race">
+                <img src="./img/pack_4.webp" alt="Prezzi noleggio Go-Kart a Ravenna, pacchetto The Race">
             </div>
         </div>
     </section>
@@ -75,23 +72,23 @@
             </div>
             <div class="schedule-item">
                 <span>Mercoledì</span>
-                <span id="mer">14:30 - 17:00</span>
+                <span id="mer">14:30 - 20:00</span>
             </div>
             <div class="schedule-item">
                 <span>Giovedì</span>
-                <span id="gio">14:30 - 17:00</span>
+                <span id="gio">14:30 - 20:00</span>
             </div>
             <div class="schedule-item">
                 <span>Venerdì</span>
-                <span id="ven">14:30 - 17:00</span>
+                <span id="ven">14:30 - 22:30</span>
             </div>
             <div class="schedule-item">
                 <span>Sabato</span>
-                <span id="sab">09:30 - 12:00 | 14:30 - 17:00</span>
+                <span id="sab">09:30 - 12:00 | 14:30 - 22:00</span>
             </div>
             <div class="schedule-item">
                 <span>Domenica</span>
-                <span id="dom">09:30 - 12:00 | 14:30 - 17:00</span>
+                <span id="dom">09:30 - 12:00 | 14:30 - 22:30</span>
             </div>
         </div>
         <i>* In caso di pioggia o maltempo la pista rimane chiusa.</i>
@@ -121,14 +118,8 @@
     <section id="contatti">
         <h2 class="section-title">Contattaci</h2>
         <div class="contact-info">
-            <p>
-                <a href="https://www.google.com/maps/dir//Via+Staggi,+221,+48121+Ravenna+RA/" target="_blank"
-                    class="address-link"><i class="fas fa-map-marker-alt"></i> Via Staggi, 221, 48121 Ravenna RA</a>
-            </p>
-
-            <p>
-                <a href="tel:+393272952688"><i class="fas fa-phone"></i> +39 3272952688</a>
-            </p>
+            <p><a href="https://www.google.com/maps/dir//Via+Staggi,+221,+48121+Ravenna+RA/" target="_blank" class="address-link"><i class="fas fa-map-marker-alt"></i> Via Staggi, 221, 48121 Ravenna RA</a></p>
+            <p><a href="tel:+393272952688"><i class="fas fa-phone"></i> +39 3272952688</a></p>
 
             <div class="social-links">
                 <a href="https://www.instagram.com/kartlagomax/" target="_blank" class="social-icon"
