--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="logo-container">
             <img src="./img/logo.webp" alt="Kart Lago Max Logo" class="logo">
         </div>
-        <video autoplay loop muted playsinline>
+        <video autoplay loop muted playsinline webkit-playsinline preload="auto">
             <source src="./img/video.mp4" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
@@ -118,7 +118,8 @@
     <section id="contatti">
         <h2 class="section-title">Contattaci</h2>
         <div class="contact-info">
-            <p><a href="https://www.google.com/maps/dir//Via+Staggi,+221,+48121+Ravenna+RA/" target="_blank" class="address-link"><i class="fas fa-map-marker-alt"></i> Via Staggi, 221, 48121 Ravenna RA</a></p>
+            <p><a href="https://www.google.com/maps/dir//Via+Staggi,+221,+48121+Ravenna+RA/" target="_blank"
+                    class="address-link"><i class="fas fa-map-marker-alt"></i> Via Staggi, 221, 48121 Ravenna RA</a></p>
             <p><a href="tel:+393272952688"><i class="fas fa-phone"></i> +39 3272952688</a></p>
 
             <div class="social-links">
