--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kart Lago Max Ravenna - Noleggio Go-Kart e Pista a Ravenna</title>
-    <meta name="description"
-        content="Vivi l'emozione del Go-Kart a Ravenna: con una delle migliori piste in Emilia-Romagna e Go-Kart moderni, Lago Max assicura divertimento per tutti. Prenota ora!">
-    <meta name="keywords"
-        content="Kart, Go-Kart, Ravenna, Kart Ravenna, Go-Kart Ravenna, LagoMax, Lago Max, Noleggio Go-Kart, Gare a Ravenna">
+    <meta name="description" content="Vivi l'emozione del Go-Kart a Ravenna: con una delle migliori piste in Emilia-Romagna e Go-Kart moderni, Lago Max assicura divertimento per tutti. Prenota ora!">
+    <meta name="keywords" content="Kart, Go-Kart, Ravenna, Kart Ravenna, Go-Kart Ravenna, LagoMax, Lago Max, Noleggio Go-Kart, Gare a Ravenna">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="./sheets/style.css">
@@ -19,11 +17,8 @@
         <div class="logo-container">
             <img src="./img/logo.webp" alt="Kart Lago Max Logo" class="logo">
         </div>
-        <video id="heroVideo" autoplay loop muted playsinline webkit-playsinline preload="metadata" controls="false"
-            disablepictureinpicture>
+        <video autoplay loop muted playsinline webkit-playsinline preload="auto">
             <source src="./img/video.mp4" type="video/mp4">
-            <source src="./img/video.webm" type="video/webm">
-            Il tuo browser non supporta i video HTML5.
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
@@ -31,8 +26,8 @@
             <h2>L'emozione della velocità in totale sicurezza</h2>
             <div class="hero-buttons">
                 <a href="tel:+393272952688" class="btn btn-primary">Chiamaci</a>
-                <a href="https://www.google.com/maps/dir//Via+Staggi,+221,+48121+Ravenna+RA/@44.4174419,12.1595265,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x477dfb00407ffb87:0x9d537198db1d94ca!2m2!1d12.2419272!2d44.4174715?entry=ttu&g_ep=EgoyMDI0MTEwNi4wIKXMDSoASAFQAw%3D%3D" target="_blank"
-                    class="btn btn-secondary">Indicazioni Maps</a>
+                <a href="https://www.google.com/maps/dir//Via+Staggi,+221,+48121+Ravenna+RA/@44.4174419,12.1595265,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x477dfb00407ffb87:0x9d537198db1d94ca!2m2!1d12.2419272!2d44.4174715?entry=ttu&g_ep=EgoyMDI0MTEwNi4wIKXMDSoASAFQAw%3D%3D"
+                    target="_blank" class="btn btn-secondary">Indicazioni Maps</a>
             </div>
         </div>
     </section>
@@ -132,12 +127,10 @@
                 </a>
             </p>
             <div class="social-links">
-                <a href="https://www.instagram.com/kartlagomax/" target="_blank" class="social-icon"
-                    aria-label="Instagram">
+                <a href="https://www.instagram.com/kartlagomax/" target="_blank" class="social-icon" aria-label="Instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://wa.me/393272952688?text=Ciao,%20vi%20contatto%20per%20..." target="_blank"
-                    class="social-icon" aria-label="WhatsApp">
+                <a href="https://wa.me/393272952688?text=Ciao,%20vi%20contatto%20per%20..." target="_blank" class="social-icon" aria-label="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
@@ -176,6 +169,7 @@
         </div>
     </div>
 
+    <script src="./orari.js"></script>
     <script src="./sheets/script.js"></script>
 </body>
 
