--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kart Lago Max Ravenna - Noleggio Go-Kart e Pista a Ravenna</title>
+    <title>Kart Lago Max Ravenna | Noleggio Go-Kart e Pista</title>
     <meta name="description"
         content="Vivi l'emozione del Go-Kart a Ravenna: con una delle migliori piste in Emilia-Romagna e Go-Kart moderni, Lago Max assicura divertimento per tutti. Prenota ora!">
     <meta name="keywords"
@@ -176,5 +176,6 @@
     <script src="./orari.js"></script>
     <script src="./sheets/script.js"></script>
 </body>
+
 
 </html>
