--- a/index.html
+++ b/index.html
@@ -94,6 +94,153 @@
         <i>* In caso di pioggia o maltempo la pista rimane chiusa.</i>
     </section>
 
+    <section id="regolamento">
+        <h2 class="section-title">REGOLAMENTO KART LAGO MAX</h2>
+        <div class="rules-container">
+            <ol>
+                <li>L’accesso alla pista è consentito solo a chi dichiara di aver preso visione e accettare
+                    integralmente il presente regolamento.
+                </li>
+                <li>È necessario il pagamento anticipato del turno, secondo le tariffe esposte o comunicate. Le tariffe
+                    del noleggio sono riferite a persona.
+                </li>
+                <li>Per il noleggio Go-kart serve un’altezza minima di 1.50 mt.</li>
+                <li>Per i minorenni è obbligatorio entrare in pista muniti di casco integrale allacciato, per i
+                    maggiorenni è
+                    possibile utilizzare anche il casco Jet o modulare allacciato.
+                </li>
+                <li>È vietato salire sul kart con abiti non idonei: scarpe aperte, tacchi, ciabatte, sciarpe, foulard,
+                    gonne
+                    lunghe, cappotti volanti; i capelli lunghi devono essere raccolti e contenuti all’interno del casco.
+                </li>
+                <li>
+                    È vietato tenere borse, zaini, telefoni o altri oggetti durante la guida. Tutti gli effetti
+                    personali devono
+                    essere riposti nelle cassette/armadietti disponibili, con deposito gratuito ma a rischio e pericolo
+                    dell’utente.
+                </li>
+                <li>
+                    Il pagamento non garantisce un uso esclusivo della pista; in base al numero di utenti e dei mezzi
+                    disponibili/utilizzati, la direzione si riserva di organizzare di volta in volta il tempo del
+                    noleggio e del
+                    numero dei partecipanti. Consapevole che la prestazione richiesta riguarda unicamente la possibilità
+                    di
+                    utilizzare la pista in forma non esclusiva e quindi in concorso con altri utenti, anche minorenni.
+                    In nessun caso ci saranno rimborsi.
+                </li>
+                <li>
+                    L’entrata in pista è subordinata alla compilazione del modulo di assunzione di responsabilità, da
+                    parte del
+                    conducente, o genitore o maggiorenne in caso di minore.
+                </li>
+                <li>
+                    In caso di minore la decisione di far partecipare il minore al noleggio è stata assunta dal
+                    maggiorenne
+                    firmando il modulo di assunzione di responsabilità che si impegna ad assumersi la responsabilità
+                    riguardo il
+                    comportamento del minore/i e qualsiasi responsabilità civile e penale verso terzi aventi causa.
+                </li>
+                <li>
+                    La direzione può rifiutare l’ingresso in pista ed inoltre ordinare il rientro immediato al box a
+                    qualunque
+                    conducente possa creare turbative o pericolo per sé e per gli altri o che non rispetti il
+                    regolamento.
+                    Conducenti e gli accompagnatori devono attenersi alle indicazioni della direzione.
+                    Fare Motorsport è rischioso, a qualsiasi livello, va affrontato con le dovute cautele. la direzione
+                    avverte
+                    che, in occasione del noleggio sono assenti servizi di assistenza medica (ambulanza), antincendio,
+                    segnalazione a mezzo bandiere.
+                </li>
+                <li>
+                    La pista non è completamente recintata quindi non possono escludersi in modo assoluto
+                    attraversamenti della
+                    stessa da parte di animali o persone non autorizzate ed inoltre la manutenzione della pista può
+                    essere
+                    temporaneamente carente, quindi non possono escludersi banchine non raccordate e pavimentazione non
+                    in
+                    perfette condizioni, quindi è fatto obbligatorio a ciascun conduttore di sincerarsi personalmente
+                    delle
+                    condizioni della pista medesima, durante il primo giro di ricognizione se la pista presenta
+                    problematiche
+                    rientrare immediatamente ai box e segnalare il problema al responsabile di pista.
+                </li>
+                <li>
+                    Non è permesso urtare intenzionalmente altri kart o barriere, invertire la direzione di marcia. La
+                    pista è
+                    utilizzata da utenti di ogni tipo, dal professionista all’inesperto; pertanto ogni conducente è
+                    tenuto ad
+                    osservare un comportamento prudente, accorto, corretto, leale e responsabile nei confronti degli
+                    altri
+                    conducenti e del personale addetto. vietata ogni genere di imprudenza e compiere sorpassi azzardati,
+                    nel
+                    dubbio attendere il momento opportuno.
+                </li>
+                <li>
+                    Ogni conducente si assume la responsabilità per e gli eventuali incidenti e per i conseguenti danni
+                    che
+                    derivassero alla propria persona o alle proprie cose ovvero a terzi e alle cose di terzi, comprese
+                    le
+                    persone e le cose all’esterno della pista nonché alle strutture, sollevando la direzione personale
+                    addetto
+                    ad ogni gravame e responsabilità.
+                </li>
+                <li>
+                    Senso di marcia orario, ed entrando in pista rispettare il segnale e attendere il momento opportuno,
+                    per uscire dalla pista segnalare la manovra a chi segue alzando una mano ed entrare lentamente in
+                    zona box.
+                </li>
+                <li>
+                    Rispettare le segnalazioni:
+                    <ul>
+                        <li>Bandiera gialla: pericolo! Rallentare e procedere con cautela (vietato il sorpasso).</li>
+                        <li>Bandiera rossa: per tutti arresto immediato (vietato il sorpasso).</li>
+                        <li>Bandiera Blu: lasciare spazio per il sorpasso (doppiaggio in sicurezza).</li>
+                        <li>Bandiera a scacchi: termine turno di noleggio, uscire dalla pista e scendere dal Kart.</li>
+                    </ul>
+                </li>
+                <li>
+                    È vietato percorrere la pista in senso contrario, in caso di arresto forzoso il veicolo non dovrà
+                    essere spinto ed il conducente non dovrà mai scendere dallo stesso. In caso di arresto attendere il
+                    personale preposto tenere sempre il casco protettivo indossato.
+                </li>
+                <li>In pista è vietato sostare lungo il tracciato, procedere a zig-zag.</li>
+                <li>
+                    In caso in pista ci siano altri conducenti in difficoltà tecnico o qualunque oggetto, detrito è
+                    assolutamente vietato fermarsi per prestare aiuto.
+                </li>
+                <li>
+                    E’ assolutamente vietato entrare in pista agli accompagnatori.
+                </li>
+                <li>
+                    In caso di noleggio del Kart l’utente ne è responsabile rimborsando i danni causati e non si
+                    sostituisce il Kart danneggiato durante il turno.
+                </li>
+                <li>
+                    L’utilizzatore dichiarandosi di essere idoneo al noleggio go-kart si trova in perfetto stato di
+                    salute e non presenta problemi cardiocircolatori.
+                </li>
+                <li>
+                    L’utilizzatore è abile alla conduzione di un Kart e che non si trova sotto l’effetto di sostanze
+                    stupefacenti, alcool, farmaci, ecc. che possano in qualche modo ridurre o alterare il proprio stato
+                    fisico.
+                </li>
+                <li>
+                    L’esposizione del regolamento attribuisce immediata efficacia a quanto in esso riportate. La
+                    violazione, anche parziale, di quanto sopra riportato può comportare a carico dei trasgressori
+                    l’immediato allontanamento all’impianto pista Lago Max fatta salva la possibilità di ogni ulteriore
+                    azione legale nei confronti degli stessi. l gestori dell’impianto sono esonerati da ogni
+                    responsabilità per ogni incidente e danno, personale e alle cose, che si dovesse subire comprese le
+                    lesioni e il ferimento, durante lo svolgimento delle gare, manifestazioni o giornate di prove libere
+                    e noleggio, con rinuncia espresso in ogni caso sin d’ora a qualsiasi pretesa risarcitoria, ragione e
+                    azione, in qualunque sede, anche giudiziaria verso i medesimi soggetti.
+                </li>
+                <li>
+                    La direzione si riserva di aggiornare o modificare il presente regolamento senza alcun preavviso.
+                </li>
+            </ol>
+        </div>
+    </section>
+
     <section id="eventi-personalizzati">
         <h2 class="section-title">Eventi Personalizzati</h2>
         <div class="event-container">
@@ -145,8 +292,10 @@
         <div class="nav-content">
             <a href="#prezzi" class="nav-item"><i class="fas fa-euro-sign"></i><span>Prezzi</span></a>
             <a href="#orari" class="nav-item"><i class="fas fa-clock"></i><span>Orari</span></a>
+            <a href="#regolamento" class="nav-item"><i class="fa-solid fa-list-check"></i><span>Regolamento</span></a>
             <a href="#eventi-personalizzati" class="nav-item"><i class="fas fa-calendar-alt"></i><span>Eventi</span></a>
-            <a href="https://pizzerialagomax.it/" class="nav-item"><i class="fas fa-utensils"></i><span>Pizzeria</span></a>
+            <a href="https://pizzerialagomax.it/" class="nav-item"><i
+                    class="fas fa-utensils"></i><span>Pizzeria</span></a>
             <a href="#contatti" class="nav-item"><i class="fas fa-envelope"></i><span>Contatti</span></a>
             <a id="open-btn" class="nav-item"><i class="fas fa-info-circle"></i><span>Chi siamo</span></a>
         </div>
@@ -176,6 +325,5 @@
     <script src="./orari.js"></script>
     <script src="./sheets/script.js"></script>
 </body>
-
 
 </html>
